--- a/day18/s2.html
+++ b/day18/s2.html
@@ -9,7 +9,9 @@
       <div class="slider">
         <div>I am a slide.</div>
         <div>I am another slide.</div>
+        <div>这是轮播图</div>
       </div>
+
     <script src="jquery-1.12.4.js"></script>
     <script src="bxslider-4-4.2.12/src/js/jquery.bxslider.js"></script>
     <script>
